--- a/app/src/main/res/layout/filter_page_revamp.xml
+++ b/app/src/main/res/layout/filter_page_revamp.xml
@@ -7,7 +7,6 @@
     android:background="@color/white"
     android:clickable="true"
     android:focusable="true">
-
     <TextView
         android:id="@+id/tv_filters"
         android:layout_width="0dp"
@@ -22,6 +21,16 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="HardcodedText" />
+
+    <ProgressBar
+        android:id="@+id/pBar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="10dp"
+        android:visibility="gone"
+        android:indeterminateTintMode="src_atop"
+        android:indeterminateTint="@color/white"
+        tools:ignore="MissingConstraints" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view_main_list"
@@ -44,6 +53,7 @@
         app:layout_constraintStart_toEndOf="@id/recycler_view_main_list"
         app:layout_constraintTop_toBottomOf="@id/tv_filters"
         tools:listitem="@layout/sub_list_view_design" />
+
 
     <LinearLayout
         android:id="@+id/reset_and_apply_buttons"
