--- a/app/src/main/res/layout/main_list_view_design.xml
+++ b/app/src/main/res/layout/main_list_view_design.xml
@@ -26,7 +26,7 @@
             android:layout_height="21sp"
             android:textStyle="bold"
             android:textAlignment="center"
-            android:visibility="gone"
+            android:visibility="invisible"
             android:background="@drawable/circle_in_main_list" />
     </LinearLayout>
 
